# Python-Web

./: README.md
homework_01-02/: .gitignore  Dockerfile  README.md  dump.logs  pyproject.toml  requirements.txt
homework_03/: README.md  factorizer.py  sorter.py
homework_04/: README.md  app.py  pyproject.toml
homework_04/storage/: data.json
homework_05/: README.md  pyproject.toml  server.py  utility.py
homework_06/: README.md  creator.py  db_connection.py  pyproject.toml  seeds.py
homework_06/sql_requests/: query_01.sql  query_02.sql  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  query_11.sql  query_12.sql
homework_07/: README.md  cli.py  config.ini  pyproject.toml  selector.py
homework_07/migrations/: env.py
homework_07/migrations/versions/: bbe4d32807e9_init.py
homework_07/src/: crud.py  db.py  models.py  seed.py
homework_08/: README.md  config.ini  consumer.py  db_bot.py  producer.py  pyproject.toml
homework_08/src/: authors.json  models.py  seed.py
homework_09/: README.md  config.ini  main.py  pyproject.toml
homework_09/src/: connection.py  models.py
homework_10/: .env.example  .gitignore  README.md  manage.py  pyproject.toml
homework_10/homework_10/: asgi.py  settings.py  urls.py  wsgi.py
homework_10/quotes/: forms.py  models.py  urls.py  views.py
homework_10/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
homework_10/quotes/static/quotes/: style.css
homework_10/quotes/templates/quotes/: author.html  base.html  index.html  new_author.html  new_quote.html  new_tag.html  tag.html
homework_10/quotes/templatetags/: extract.py
homework_10/users/: urls.py  views.py
homework_10/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  signup.html
homework_10/utils/: authors.json  connection_mongo.py  migration2postgres.py  seed_quotes_mongo.py
homework_11-14/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
homework_11-14/client/: index.html  main.html
homework_11-14/client/css/: style.css
homework_11-14/client/javascript/: app.js  main.js
homework_11-14/docs/: conf.py
homework_11-14/docs/_build/doctrees/: environment.pickle  index.doctree
homework_11-14/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
homework_11-14/docs/_build/html/_sources/: index.rst.txt
homework_11-14/migrations/: env.py
homework_11-14/migrations/versions/: 40629eabf872_add_user.py  91e1da40604e_mod_1.py  a92bfe13c91c_init.py  aac4bd235c1d_add_field_confirmed.py  ddb7897e1ab5_add_reset_password.py  ed231f88afd5_add_user_roles.py
homework_11-14/src/: schemas.py
homework_11-14/src/conf/: config.py  messages.py
homework_11-14/src/database/: db.py  models.py
homework_11-14/src/repository/: contacts.py  users.py
homework_11-14/src/routes/: auth.py  contacts.py  users.py
homework_11-14/src/services/: auth.py  cloud_image.py  email.py  roles.py
homework_11-14/src/services/templates/: email_reset_password_template.html  email_verification_template.html
homework_11-14/static/: cover.css  index.html
homework_11-14/templates/: index.html
homework_11-14/tests/: conftest.py  test_main.py  test_route_auth.py  test_route_contacts.py  test_services_email.py  test_unit_repository_contacts.py  test_unit_repository_users.py
