[tool.poetry]
name = "homework-2-4"
version = "0.1.0"
description = "test server"
authors = ["Matajur <gavrylchenko.d@ukr.net>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "homework_2_4"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
