[tool.poetry]
name = "homework-2-6"
version = "0.1.0"
description = "database"
authors = ["Matajur <gavrylchenko.d@ukr.net>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "homework_2_6"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.7"
faker = "^19.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
